{const{d}
[eval]:1
const{createClient}=require('@supabase/supabase-js');const c=createClient(process.env.SUPABASE_URL,process.env.SUPABASE_SERVICE_ROLE_KEY);(async()==await c.from('mock_accounts').select('*').order('created_at',{ascending:false}).limit(5);console.log(JSON.stringify(d,null,2))})()
                                                                                                                                                          ^

SyntaxError: Unexpected identifier 'c'
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2
